--- a/src/Components/Sidebar/SidebarComp.css
+++ b/src/Components/Sidebar/SidebarComp.css
@@ -1,34 +1,40 @@
 .sidebar-footer {
-    background-color: #2D2D69;
-    padding: 16px;
-    display: flex;
-    align-self: center;
-    border-radius: 3%;
-    width: 28vh;
-    height: 5vh;
-    margin-top: 90%;
-    margin-left: 1.5vh;
+  background-color: #2d2d69;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 3%;
+  width: 200px;
+  position: fixed;
+  bottom: 7%;
+  left: 0.45%;
+  height: 24px;
+}
+@media (max-height: 520px) {
+  .sidebar-footer {
+    bottom: auto;
+    top: 390px;
   }
-  
-  .profile-image {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 16px;
-  }
-  
-  .profile-details {
-    flex: 1;
-    color: white;
-  }
-  
-  .profile-details h3 {
-    margin: 0;
-    font-size: 15px;
-  }
-  
-  .profile-details p {
-    font-size: 12px;
-    margin: 0;
-  }
-  
+}
+.profile-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 16px;
+}
+
+.profile-details {
+  flex: 1;
+  color: white;
+}
+
+.profile-details h3 {
+  margin: 0;
+  font-size: 15px;
+}
+
+.profile-details p {
+  font-size: 12px;
+  margin: 0;
+}
